Fixed ons-navigator vanishing on android 2.3.x and wrapping with ons-page.

--- a/framework/css/common.css
+++ b/framework/css/common.css
@@ -23,6 +23,15 @@ ons-split-view, ons-sliding-menu, ons-tabbar {
   display: block;
 }
 
+ons-navigator {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
+}
+
 * {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -56,6 +65,7 @@ ons-toolbar + .page__content {
 .page__content {
   overflow: scroll;
   -webkit-overflow-scrolling: touch;
+  z-index: 0;
 }
 
 .page__bottom-bar-fill ~ .page__content {
